--- a/.editorconfig
+++ b/.editorconfig
@@ -11,8 +11,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml}]
+[*.{css,js,cjs,mjs,json,ts,vue,yml,yaml}]
 indent_size = 2
 
-[docker-compose.yml]
+[composer.json]
 indent_size = 4
