--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Taipei
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=zh_TW
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=zh_TW
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
