--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.15",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "autoprefixer": "^10.0.0",
+    "axios": "^1.7.4",
+    "concurrently": "^9.0.1",
+    "laravel-vite-plugin": "^1.0",
+    "postcss": "^8.4.0",
+    "postcss-import": "^16.0.0",
+    "tailwindcss": "^3.4.0",
+    "vite": "^6.0.0",
+    "vue": "^3.5.0"
+  }
 }
