--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
     "build": "vite build",
     "dev": "vite"
   },
-  "devDependencies": {
+  "dependencies": {
     "@inertiajs/vue3": "^2.0.0",
+    "axios": "^1.7.4",
+    "chart.js": "^4.4.7",
+    "vue": "^3.5.0"
+  },
+  "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
     "autoprefixer": "^10.0.0",
-    "axios": "^1.7.4",
     "concurrently": "^9.0.1",
-    "laravel-vite-plugin": "^1.0",
+    "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.0",
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.0",
-    "vite": "^6.0.0",
-    "vue": "^3.5.0"
+    "vite": "^6.0.0"
   }
 }
