--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=Asia/Taipei
 APP_URL=http://localhost
 
 APP_LOCALE=zh_TW
@@ -39,7 +38,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 
 CACHE_STORE=file
-CACHE_PREFIX=
+# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
