--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "private": true,
   "type": "module",
   "scripts": {
@@ -6,19 +7,17 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@inertiajs/vue3": "^2.0.0",
-    "axios": "^1.7.4",
-    "chart.js": "^4.4.7",
-    "vue": "^3.5.0"
+    "@inertiajs/vue3": "^2.2.4",
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.0",
-    "autoprefixer": "^10.0.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-vue": "^6.0.1",
     "concurrently": "^9.0.1",
-    "laravel-vite-plugin": "^1.0.0",
-    "postcss": "^8.4.0",
-    "postcss-import": "^16.0.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^6.0.0"
+    "laravel-vite-plugin": "^2.0.1",
+    "tailwindcss": "^4.1.13",
+    "vite": "^7.1.7"
   }
 }
